correcciones en cuotas

--- a/WebApplication1/Areas/coadmin/Views/contratos/agregar.cshtml
+++ b/WebApplication1/Areas/coadmin/Views/contratos/agregar.cshtml
@@ -64,7 +64,7 @@
                             <div class="form-group row">
                                 <label for="example-email-input" class="col-sm-3 col-form-label">Nombre</label>
                                 <div class="col-sm-9">
-                                    <input class="form-control" type="text" value=""
+                                    <input maxlength="30" class="form-control soloTexto" type="text" value=""
                                            data-toggle="tooltip" title="Nombre del contrato"
                                            name="first_name" required
                                            placeholder="Nombre" id="example-email-input">
@@ -75,7 +75,7 @@
                             <div class="form-group row">
                                 <label for="example-date-input" class="col-sm-3 col-form-label">Fecha del contrato</label>
                                 <div class="col-sm-9">
-                                    <input class="form-control" type="date"
+                                    <input class="form-control" type="date" autocomplete="off"
                                            data-toggle="tooltip" title="Mes / día / año | Fecha del día que se subió el contrato"
                                            name="date_contract" required
                                            value="" id="example-date-input">
@@ -86,7 +86,7 @@
                             <div class="form-group row">
                                 <label for="example-date-input" class="col-sm-3 col-form-label">Fecha de notificación</label>
                                 <div class="col-sm-9">
-                                    <input class="form-control" type="date" value="" name="date_notification"
+                                    <input class="form-control" type="date" value="" name="date_notification" autocomplete="off"
                                            data-toggle="tooltip" title="Mes / día / año | Fecha que se recibirá recordatorio de vencimiento del contrato"
                                            id="example-date-input-ven" required>
                                     <small class="form-text text-muted">Mes / día / año | Fecha que se recibirá recordatorio de vencimiento del contrato</small>
@@ -109,7 +109,7 @@
                             <div class="form-group row">
                                 <label for="example-lastname1-input" class="col-sm-3 col-form-label">Descripción</label>
                                 <div class="col-sm-9">
-                                    <textarea class="form-control" rows="3" name="description"
+                                    <textarea required class="form-control" rows="3" name="description"
                                               data-toggle="tooltip" title="Descripción del contrato"
                                               placeholder="Descripción"></textarea>
                                     <small class="form-text text-muted">Descripción del contrato</small>
