--- a/WebApplication1/Areas/coadmin/Views/titulares/agregarVehiculo.cshtml
+++ b/WebApplication1/Areas/coadmin/Views/titulares/agregarVehiculo.cshtml
@@ -108,53 +108,53 @@
                         <div class="form-group row">
                             <label for="example-brand-input" class="col-sm-3 col-form-label">Marca</label>
                             <div class="col-sm-9">
-                                <input class="form-control" type="text" value="" name="brand"
+                                <input maxlength="20" class="form-control soloTexto" type="text" value="" name="brand"
                                        data-toggle="tooltip" title="Marca del vehículo"
-                                       placeholder="Marca" id="example-brand-input">
+                                       placeholder="Marca" id="example-brand-input" required />
                                 <small class="form-text text-muted">Marca del vehículo</small>
                             </div>
                         </div>
                         <div class="form-group row">
                             <label for="example-model-input" class="col-sm-3 col-form-label">Modelo</label>
                             <div class="col-sm-9">
-                                <input class="form-control" type="text" value="" placeholder="Modelo" name="model"
-                                       id="example-model-input" data-toggle="tooltip" title="Modelo del vehículo">
+                                <input maxlength="20" class="form-control" type="text" value="" placeholder="Modelo" name="model"
+                                       id="example-model-input" data-toggle="tooltip" title="Modelo del vehículo" required>
                                 <small class="form-text text-muted">Modelo del vehículo</small>
                             </div>
                         </div>
                         <div class="form-group row">
                             <label for="example-color-input" class="col-sm-3 col-form-label">Color</label>
                             <div class="col-sm-9">
-                                <input class="form-control" type="text" value="" name="colour"
+                                <input maxlength="20" class="form-control soloTexto" type="text" value="" name="colour"
                                        data-toggle="tooltip" title="Color del vehículo"
-                                       placeholder="Color" id="example-color-input">
+                                       placeholder="Color" id="example-color-input" required>
                                 <small class="form-text text-muted">Color del vehículo</small>
                             </div>
                         </div>
                         <div class="form-group row">
                             <label for="example-year-input" class="col-sm-3 col-form-label">Año</label>
                             <div class="col-sm-9">
-                                <input class="form-control" type="number" value="" name="year"
+                                <input maxlength="4" class="form-control soloNumero" type="text" value="" name="year"
                                        data-toggle="tooltip" title="Año del vehículo"
-                                       placeholder="Año" id="example-year-input">
+                                       placeholder="Año" id="example-year-input" required>
                                 <small class="form-text text-muted">Año del vehículo</small>
                             </div>
                         </div>
                         <div class="form-group row">
                             <label for="example-cartable-input" class="col-sm-3 col-form-label">Tablilla</label>
                             <div class="col-sm-9">
-                                <input class="form-control" type="text" value="" name="clapboard"
+                                <input maxlength="20" class="form-control" type="text" value="" name="clapboard"
                                        data-toggle="tooltip" title="Tablilla del vehículo"
-                                       placeholder="Tablilla" id="example-cartable-input">
+                                       placeholder="Tablilla" id="example-cartable-input" required>
                                 <small class="form-text text-muted">Tablilla del vehículo</small>
                             </div>
                         </div>
                         <div class="form-group row">
                             <label for="example-numbercar-input" class="col-sm-3 col-form-label">Número de sello</label>
                             <div class="col-sm-9">
-                                <input class="form-control" type="text" value="" name="stamp_number"
+                                <input maxlength="20" class="form-control soloNumero" type="text" value="" name="stamp_number"
                                        data-toggle="tooltip" title="Número de sello del vehículo"
-                                       placeholder="Número de sello" id="example-numbercar-input">
+                                       placeholder="Número de sello" id="example-numbercar-input" required>
                                 <small class="form-text text-muted">Número de sello del vehículo</small>
                             </div>
                         </div>
