--- a/WebApplication1/Areas/coadmin/Views/titulares/editarVehiculo.cshtml
+++ b/WebApplication1/Areas/coadmin/Views/titulares/editarVehiculo.cshtml
@@ -82,7 +82,7 @@
                             <div class="form-group row">
                                 <label for="example-brand-input" class="col-sm-3 col-form-label">Marca</label>
                                 <div class="col-sm-9">
-                                    <input class="form-control"
+                                    <input required maxlength="20" class="form-control soloTexto"
                                            type="text" data-toggle="tooltip"
                                            value="@Model.vehiculo.Brand"
                                            name="brand"
@@ -94,7 +94,7 @@
                             <div class="form-group row">
                                 <label for="example-model-input" class="col-sm-3 col-form-label">Modelo</label>
                                 <div class="col-sm-9">
-                                    <input class="form-control"
+                                    <input maxlength="20" required class="form-control"
                                            type="text"
                                            value="@Model.vehiculo.Model"
                                            name="model" data-toggle="tooltip"
@@ -106,7 +106,7 @@
                             <div class="form-group row">
                                 <label for="example-color-input" class="col-sm-3 col-form-label">Color</label>
                                 <div class="col-sm-9">
-                                    <input class="form-control"
+                                    <input required maxlength="20" class="form-control soloTexto"
                                            type="text"
                                            value="@Model.vehiculo.Color"
                                            name="colour" data-toggle="tooltip"
@@ -118,8 +118,8 @@
                             <div class="form-group row">
                                 <label for="example-year-input" class="col-sm-3 col-form-label">Año</label>
                                 <div class="col-sm-9">
-                                    <input class="form-control" name="year"
-                                           type="number" data-toggle="tooltip"
+                                    <input required maxlength="4" class="form-control soloNumero" name="year"
+                                           type="text" data-toggle="tooltip"
                                            value="@Model.vehiculo.Year"
                                            placeholder="Año"
                                            id="example-year-input">
@@ -129,7 +129,7 @@
                             <div class="form-group row">
                                 <label for="example-cartable-input" class="col-sm-3 col-form-label">Tablilla</label>
                                 <div class="col-sm-9">
-                                    <input class="form-control"
+                                    <input required maxlength="20" class="form-control"
                                            type="text" data-toggle="tooltip"
                                            value="@Model.vehiculo.ClapBoard"
                                            name="clapboard"
@@ -141,7 +141,7 @@
                             <div class="form-group row">
                                 <label for="example-numbercar-input" class="col-sm-3 col-form-label">Número de sello</label>
                                 <div class="col-sm-9">
-                                    <input class="form-control"
+                                    <input maxlength="20" required class="form-control soloNumero"
                                            type="text"
                                            value="@Model.vehiculo.StampNumber"
                                            name="stamp_number" data-toggle="tooltip"
