--- a/WebApplication1/Areas/coadmin/Views/Shared/_Layout.cshtml
+++ b/WebApplication1/Areas/coadmin/Views/Shared/_Layout.cshtml
@@ -25,7 +25,7 @@
     <link rel="stylesheet" href="~/assets/plugins/bootstrap-rating/bootstrap-rating.css" type="text/css" />
     <a href="~/assets/plugins/datatables/json/Spanish.json">~/assets/plugins/datatables/json/Spanish.json</a>
 
-    
+
 
     <link href="~/assets/css/bootstrap.min.css" rel="stylesheet" type="text/css">
 
@@ -35,6 +35,8 @@
     <link href="~/assets/css/timeout-dialog.css" rel="stylesheet" type="text/css" />
     <link rel="stylesheet" href="//code.jquery.com/ui/1.12.1/themes/base/jquery-ui.css">
     <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/timepicker/1.3.5/jquery.timepicker.min.css">
+
+    <link rel="stylesheet" href="~/Content/bootstrap/bootstrap-multiselect.css">
     <style>
         .search-form {
             display: inline-flex;
@@ -53,8 +55,8 @@
             color: #00ff00;
         }
 
-        .no-disp{
-            cursor: not-allowed!important;
+        .no-disp {
+            cursor: not-allowed !important;
         }
 
         #txtMessage {
@@ -133,21 +135,21 @@
                         }
                         else
                         {
-                    <div style="display:flex!important; justify-content:center!important">
-                        <select class="form-control selectComunidad" style="width:80%!important" onchange="ChangeCommunity(this)" name="communitySelect">
-                            @foreach (var item in Model.communityList)
-                            {
-                                if (Convert.ToInt64(Session["CURRENT_COMU"]) == item.id)
-                                {
-                                    <option value="@item.id" selected>@item.first_name</option>
-                                }
-                                else
-                                {
-                                    <option value="@item.id">@item.first_name</option>
-                                }
-                            }
-                        </select>
-                    </div>
+                            <div style="display:flex!important; justify-content:center!important">
+                                <select class="form-control selectComunidad" style="width:80%!important" onchange="ChangeCommunity(this)" name="communitySelect">
+                                    @foreach (var item in Model.communityList)
+                                    {
+                                        if (Convert.ToInt64(Session["CURRENT_COMU"]) == item.id)
+                                        {
+                                            <option value="@item.id" selected>@item.first_name</option>
+                                        }
+                                        else
+                                        {
+                                            <option value="@item.id">@item.first_name</option>
+                                        }
+                                    }
+                                </select>
+                            </div>
                         }
                         <p class="text-primary text-uppercase"><sub><i class="mdi mdi-checkbox-blank-circle"></i> Activo</sub></p>
                     </div>
@@ -226,13 +228,13 @@
                                             @if (Model.side_sub_menu == "cuotas_cuenta")
                                             {
                                                 <li class="active">
-                                                    <a href="@Url.Action("agregarcuenta", "cuotas", new { area = "coadmin" })">Agregar Cuenta de banco</a>
+                                                    <a href="@Url.Action("listadoCuentas", "cuotas", new { area = "coadmin" })">Listado de cuentas de banco</a>
                                                 </li>
                                             }
                                             else
                                             {
                                                 <li>
-                                                    <a href="@Url.Action("agregarcuenta", "cuotas", new { area = "coadmin" })">Agregar Cuenta de banco</a>
+                                                    <a href="@Url.Action("listadoCuentas", "cuotas", new { area = "coadmin" })">Listado de cuentas de banco</a>
                                                 </li>
                                             }
 
@@ -256,7 +258,7 @@
                                         <a href="javascript:void(0);" class="waves-effect waves-light"><i class="mdi mdi-coin"></i><span>Cuotas</span><span class="float-right"><i class="mdi mdi-chevron-right"></i></span></a>
                                         <ul class="list-unstyled">
                                             <li><a href="@Url.Action("listado", "cuotas", new { area = "coadmin" })">Listado de cuotas</a></li>
-                                            <li><a href="@Url.Action("agregarcuenta", "cuotas", new { area = "coadmin" })">Agregar Cuenta de banco</a></li>
+                                            <li><a href="@Url.Action("listadoCuentas", "cuotas", new { area = "coadmin" })">Listado de cuentas de banco</a></li>
                                             <li><a href="@Url.Action("pagos","cuotas", new { area = "coadmin" })">Pagos</a></li>
                                         </ul>
                                     }
@@ -976,6 +978,8 @@
     <script src="~/assets/js/jquery.nicescroll.js"></script>
     <script src="~/assets/js/jquery.scrollTo.min.js"></script>
 
+    <script src="~/Scripts/bootstrap-multiselect.js"></script>
+
     <!-- Required datatable js -->
     <script type="text/javascript" src="~/assets/plugins/datatables/jquery.dataTables.min.js"></script>
     <script src="~/assets/plugins/datatables/dataTables.bootstrap4.min.js"></script>
@@ -1019,8 +1023,87 @@
                 "order": [[2, "desc"]]
             });
 
-             $('#tableComunities').DataTable({
+            $('#tableComunities').DataTable({
                 "ordering": false
+            });
+        });
+
+        //Solo texto. Validacion para inputs
+        $('.soloTexto').bind('keypress', function (event) {
+            var regex = new RegExp("^[a-zA-Z ]+$");
+            var key = String.fromCharCode(!event.charCode ? event.which : event.charCode);
+            if (!regex.test(key)) {
+                event.preventDefault();
+                return false;
+            }
+        });
+
+        //Solo numero. Validacion para inputs
+        $('.soloNumero').bind('keypress', function (event) {
+            var regex = new RegExp("^[0-9]+$");
+            var key = String.fromCharCode(!event.charCode ? event.which : event.charCode);
+            if (!regex.test(key)) {
+                event.preventDefault();
+                return false;
+            }
+        });
+
+        //Validacion dsolo un punto decimal y dos decimales
+        function filterFloat(evt, input) {
+            // Backspace = 8, Enter = 13, ‘0′ = 48, ‘9′ = 57, ‘.’ = 46, ‘-’ = 43
+            var key = window.Event ? evt.which : evt.keyCode;
+            var chark = String.fromCharCode(key);
+            var tempValue = input.value + chark;
+            if (key >= 48 && key <= 57) {
+                if (filter(tempValue) === false) {
+                    return false;
+                } else {
+                    return true;
+                }
+            } else {
+                if (key == 8 || key == 13 || key == 0) {
+                    return true;
+                } else if (key == 46) {
+                    if (filter(tempValue) === false) {
+                        return false;
+                    } else {
+                        return true;
+                    }
+                } else {
+                    return false;
+                }
+            }
+        }
+        function filter(__val__) {
+            var preg = /^([0-9]+\.?[0-9]{0,2})$/;
+            if (preg.test(__val__) === true) {
+                return true;
+            } else {
+                return false;
+            }
+
+        }
+
+        //Validar si el checkbox de Arrendamiento fue activado
+
+        $(document).ready(function () {
+            if ($("#customCheck6").is(':checked')) {
+                $(".hiddenRequired").attr('required', true);
+            }
+
+            $("#customCheck6").click(function () {
+                if ($("#customCheck6").is(':checked')) {
+                    $(".hiddenRequired").attr('required', true);
+                } else {
+                    $(".hiddenRequired").prop('required', false);
+                }
+            });
+            $("#customCheck7").click(function () {
+                if ($("#customCheck7").is(':checked')) {
+                    $(".hiddenRequired").prop('required', false);
+                } else {
+                    $(".hiddenRequired").attr('required', true);
+                }
             });
         });
     </script>
@@ -1576,6 +1659,33 @@
                     $("#ck-body-loading-overlay").hide();
                     if (result.result === "error") {
                         console.log('couln\'t get roles');
+                    } else {
+                        location.reload();
+                    }
+                },
+                processData: false,
+                contentType: false
+            });
+        }
+
+        function onDeleteBank(self) {
+            $("#ck-body-loading-overlay").show();
+            var id = $(self).data("id");
+            var formData = new FormData();
+            formData.append("bankId", id);
+            var url = "@Url.Action("DeleteBank", "cuotas", new { area = "coadmin" })";
+
+            var errUrl = "@Url.Action("listadoCuentas", "cuotas", new { area = "coadmin", Error = "No se puede eliminar esta cuenta porque posee cuotas asociadas"  })";
+            $.ajax({
+                url: url,
+                type: "post",
+                data: formData,
+                success: function (result) {
+                    $("#ck-body-loading-overlay").hide();
+                    if (result.result === "error") {
+                        console.log('couln\'t get roles');
+                    } else if (result.result === "NotAlowed") {
+                        window.location = errUrl;
                     } else {
                         location.reload();
                     }
