--- a/WebApplication1/Areas/coadmin/Views/cuotas/agregar.cshtml
+++ b/WebApplication1/Areas/coadmin/Views/cuotas/agregar.cshtml
@@ -52,7 +52,7 @@
                             <div class="form-group row">
                                 <label for="example-email-input" class="col-sm-3 col-form-label">Nombre de la cuota</label>
                                 <div class="col-sm-9">
-                                    <input class="form-control" type="text" value="" name="fee_name" required
+                                    <input maxlength="30" class="form-control soloTexto" type="text" value="" name="fee_name" required
                                            placeholder="Cuota..." id="example-email-input">
                                     <small class="form-text text-muted">Nombre de la cuota</small>
                                 </div>
@@ -61,7 +61,7 @@
                             <div class="form-group row">
                                 <label for="example-name1-input" class="col-sm-3 col-form-label">Costo</label>
                                 <div class="col-sm-9">
-                                    <input class="form-control" type="text" value="" name="cost" required
+                                    <input class="form-control" maxlength="20" type="text" onkeypress="return filterFloat(event,this);" value="" name="cost" required
                                            placeholder="0.00" id="example-name1-input">
                                     <small class="form-text text-muted">Costo</small>
                                 </div>
@@ -70,7 +70,7 @@
                             <div class="form-group row">
                                 <label for="example-name1-input" class="col-sm-3 col-form-label">Cargo de impuestos</label>
                                 <div class="col-sm-9">
-                                    <input class="form-control" type="text" value="" name="taxCharge" required
+                                    <input class="form-control" maxlength="20" type="text" onkeypress="return filterFloat(event,this);" value="" name="taxCharge" required
                                            placeholder="0.00" id="example-name1-input">
                                     <small class="form-text text-muted">Cargo de impuestos</small>
                                 </div>
@@ -79,7 +79,7 @@
                             <div class="form-group row">
                                 <label for="example-name1-input" class="col-sm-3 col-form-label">Pena</label>
                                 <div class="col-sm-9">
-                                    <input class="form-control" type="text" value="" name="penalty" required
+                                    <input class="form-control" maxlength="20" type="text" onkeypress="return filterFloat(event,this);" value="" name="penalty" required
                                            placeholder="0.00" id="example-name1-input">
                                     <small class="form-text text-muted">Pena</small>
                                 </div>
@@ -87,25 +87,18 @@
                             <div class="form-divider"></div>
                             <div class="form-group row">
                                 <label class="col-sm-3 col-form-label">Cuenta de banco</label>
-                                <div class="col-sm-6">
-                                    <select class="form-control" name="bank_id" required>
+                                <div class="col-sm-6">                                   
+                                    <select required name="bank_id" class="selectpicker form-control" data-selected-text-format="count > 2" data-container="body" data-live-search="true" data-hide-disabled="true" data-actions-box="true" data-virtual-scroll="true">
                                         <option value="">Elije una cuenta</option>
                                         @foreach (var item in Model.bankList)
                                         {
-                                            if (item.id == Model.bankId)
-                                            {
-                                                <option value="@item.id" selected>@item.account_number</option>
-                                            }
-                                            else
-                                            {
-                                                <option value="@item.id">@item.account_number</option>
-                                            }
+                                            <option value="@item.id">@item.account_name ( @item.bank_name )</option>
                                         }
                                     </select>
                                     <small class="form-text text-muted">Cuenta de banco</small>
                                 </div>
                                 <div class="col-sm-3">
-                                    <a href="@Url.Action("agregarcuenta", "cuotas", new {  area = "coadmin" })">
+                                    <a href="@Url.Action("agregarCuenta", "cuotas", new {  area = "coadmin", nC = 1 })">
                                         <button type="button" class="btn btn-primary waves-effect waves-light">Agregar cuenta</button>
                                     </a>
                                 </div>
@@ -114,7 +107,7 @@
                             <div class="form-group row">
                                 <label for="example-lastname1-input" class="col-sm-3 col-form-label">Cuenta comercial</label>
                                 <div class="col-sm-9">
-                                    <input class="form-control" type="text" value="" name="merchant_account" required
+                                    <input class="form-control soloNumero" maxlength="20" type="text" value="" name="merchant_account" required
                                            placeholder="XXX-XXXXXXXX-X-XX" id="example-lastname1-input">
                                     <small class="form-text text-muted">Cuenta comercial</small>
                                 </div>
