--- a/WebApplication1/Areas/coadmin/Views/cuotas/editarCuenta.cshtml
+++ b/WebApplication1/Areas/coadmin/Views/cuotas/editarCuenta.cshtml
@@ -1,7 +1,7 @@
 ﻿
 @{
-    ViewBag.Title = "agregarcuenta";
-    Page.Title = "Agregar cuenta - Brokolee Software";
+    ViewBag.Title = "editarCuenta";
+    Page.Title = "Editar cuenta - Brokolee Software";
 }
 
 <div class="page-content-wrapper">
@@ -13,13 +13,13 @@
                 <div class="page-title-box">
                     <div class="float-left">
                         <div class="breadcrumb float-md-right">
-                            <h4 class="page-title">Agregar Cuenta de banco</h4>
+                            <h4 class="page-title">Editar Cuenta de banco</h4>
                         </div>
                     </div>
                     <div class="float-right">
                         <ul class="breadcrumb float-md-right">
                             <li class="breadcrumb-item"><a href="index.html" class="text-success"><i class="mdi mdi-home-modern"></i> Panel de control</a></li>
-                            <li class="breadcrumb-item active">Agregar cuenta</li>
+                            <li class="breadcrumb-item active">Editar cuenta</li>
                         </ul>
                     </div>
                 </div>
@@ -37,7 +37,7 @@
 
             <div class="col-12">
                 <div class="card">
-                    @using (Html.BeginForm("addbank", "cuotas", FormMethod.Post, new
+                    @using (Html.BeginForm("editBank", "cuotas", FormMethod.Post, new
                     {
                         id = "addForm",
                         @class = "search-form",
@@ -46,45 +46,45 @@
                     }))
                     {
                         @Html.AntiForgeryToken()
+                        <input hidden name="account_id" value="@Model.bankItem.id"/>
                         <div class="card-body">
                             <h5 class="d-inline-block m-b-20">Información de la Cuenta de banco</h5>
                             <div class="form-divider"></div>
                             <div class="form-group row">
                                 <label for="example-email-input" class="col-sm-3 col-form-label">Nombre de la cuenta</label>
                                 <div class="col-sm-9">
-                                    <input maxlength="30" class="form-control" type="text" value="" name="account_name"
+                                    <input maxlength="30" class="form-control" type="text" value="@Model.bankItem.account_name" name="account_name"
                                            placeholder="Cuenta personal" id="example-email-input" required>
-                                    <small class="form-text text-muted">Nombre de la cuenta</small>
+                                    @*<small class="form-text text-muted">Nombre de la cuenta</small>*@
                                 </div>
                             </div>
                             <div class="form-divider"></div>
                             <div class="form-group row">
                                 <label for="example-name1-input" class="col-sm-3 col-form-label">Número de cuenta</label>
                                 <div class="col-sm-9">
-                                    <input maxlength="20" class="form-control soloNumero" type="text" value="" name="account_number"
+                                    <input maxlength="20" class="form-control soloNumero" type="text" value="@Model.bankItem.account_number" name="account_number"
                                            placeholder="XXX-XXXXXXXX-X-XX" id="example-name1-input" required>
-                                    <small class="form-text text-muted">Número de cuenta</small>
+                                    @*<small class="form-text text-muted">Número de cuenta</small>*@
                                 </div>
                             </div>
                             <div class="form-divider"></div>
                             <div class="form-group row">
                                 <label for="example-name1-input" class="col-sm-3 col-form-label">Nombre del banco</label>
                                 <div class="col-sm-9">
-                                    <input  maxlength="30" class="form-control soloTexto" type="text" value="" name="bank_name"
+                                    <input  maxlength="30" class="form-control soloTexto" type="text" value="@Model.bankItem.bank_name" name="bank_name"
                                            placeholder="Nombre del banco" id="example-name1-input" required>
-                                    <small class="form-text text-muted">Nombre del banco</small>
+                                    @*<small class="form-text text-muted">Nombre del banco</small>*@
                                 </div>
                             </div>
                             <div class="form-divider"></div>
                             <div class="form-group row">
                                 <label for="example-lastname1-input" class="col-sm-3 col-form-label">Número de ruta</label>
                                 <div class="col-sm-9">
-                                    <input maxlength="20" class="form-control soloNumero" type="text" value="" name="route_number"
+                                    <input maxlength="20" class="form-control soloNumero" type="text" value="@Model.bankItem.route_number" name="route_number"
                                            placeholder="XXX-XXXXXXXX-X-XX" id="example-lastname1-input" required>
-                                    <small class="form-text text-muted">Número de ruta</small>
+                                    @*<small class="form-text text-muted">Número de ruta</small>*@
                                 </div>
                             </div>
-                            <input hidden name="nC" value="@ViewBag.newCuota"/>
                             <button type="submit" class="btn btn-primary waves-effect waves-light">Guardar</button>
                             <a href="javascript:history.back()"><button type="button" class="btn btn-danger waves-effect waves-light">Cancelar</button>
 
