--- a/WebApplication1/Areas/coadmin/Views/cuotas/listadoCuentas.cshtml
+++ b/WebApplication1/Areas/coadmin/Views/cuotas/listadoCuentas.cshtml
@@ -1,6 +1,6 @@
 ﻿@{
     ViewBag.Title = "listado";
-    Page.Title = "Listado de cuotas - Brokolee Software";
+    Page.Title = "Listado de cuentas de banco - Brokolee Software";
 }
 
 <div class="page-content-wrapper">
@@ -12,13 +12,13 @@
                 <div class="page-title-box">
                     <div class="float-left">
                         <div class="breadcrumb float-md-right">
-                            <h4 class="page-title">Listado de Cuotas</h4>
+                            <h4 class="page-title">Listado de cuentas de banco</h4>
                         </div>
                     </div>
                     <div class="float-right">
                         <ul class="breadcrumb float-md-right">
                             <li class="breadcrumb-item"><a href="@Url.Action("panel", "control", new { area = "coadmin" })" class="text-success"><i class="mdi mdi-home-modern"></i> Panel de control</a></li>
-                            <li class="breadcrumb-item active">Listado de cuotas</li>
+                            <li class="breadcrumb-item active">Listado de cuentas de banco</li>
                         </ul>
                     </div>
                 </div>
@@ -75,7 +75,7 @@
 
                             </div>
                             <div class="col-md-6 mb-1">
-                                <a href="@Url.Action("agregar", "cuotas", new { area = "coadmin" })">
+                                <a href="@Url.Action("agregarCuenta", "cuotas", new { area = "coadmin" })">
                                     <button type="button" class="btn btn-primary waves-effect waves-light float-xl-right float-lg-right float-md-left mb-1">Agregar</button>
                                 </a>
                             </div>
@@ -85,43 +85,37 @@
                             <table id="dataTable-directorio-suplidores" class="table table-striped table-bordered normal" style="border-collapse: collapse; border-spacing: 0; width: 100%;">
                                 <thead>
                                     <tr>
-                                        <th class="f-b">Nombre</th>
+                                        <th class="f-b">Nombre de la cuenta</th>
+                                        <th class="f-b">Número de cuenta</th>
                                         <th class="f-b">Nombre del banco</th>
-                                        <th class="f-b">Cuenta comercial</th>
-                                        <th class="f-b">Costo</th>
-                                        <th class="f-b">Cargo de impuestos</th>
-                                        <th class="f-b">Pena</th>
-                                        <th class="f-b">Fecha</th>
+                                        <th class="f-b">Número de ruta</th>                                        
                                         <th class="f-b text-center">Editar / Eliminar</th>
                                     </tr>
                                 </thead>
                                 <tbody>
-                                    @foreach (var item in Model.feeList)
+                                    @foreach (var item in Model.banks)
                                     {
-                                        <tr>
-                                            <td>@item.name</td>
-                                            <td>@item.bank.bank_name</td>
-                                            <td>@item.merchant_account</td>
-                                            <td class="text-center">@item.cost.ToString().Replace(',', '.')</td>
-                                            <td class="text-center">@item.tax_charge.ToString().Replace(',', '.')</td>
-                                            <td class="text-center">@item.penalty.ToString().Replace(',', '.')</td>
-                                            <td class="text-center">@Convert.ToDateTime(item.created_at).ToString("MM/dd/yyyy")</td>
-                                            <td class="text-center">
-                                                <a href="@Url.Action("editar", "cuotas", new { area = "coadmin", editID = item.id })">
-                                                    <button type="button" class="btn btn-primary waves-effect waves-light btn-sm mr-1 mb-1"
-                                                            data-toggle="tooltip" data-placement="top" title="Editar">
-                                                        <i class="mdi mdi-lead-pencil"></i>
-                                                    </button>
-                                                </a>
-                                                <a href="#">
-                                                    <button type="button" onclick="onDeleteFee(this)" data-id="@item.id"
-                                                            class="btn btn-danger waves-effect waves-light btn-sm mb-1"
-                                                            data-toggle="tooltip" data-placement="top" title="Eliminar">
-                                                        <i class="mdi mdi-delete"></i>
-                                                    </button>
-                                                </a>
-                                            </td>
-                                        </tr>
+                                    <tr>
+                                        <td class="text-center">@item.account_name</td>
+                                        <td class="text-center">@item.account_number</td>
+                                        <td class="text-center">@item.bank_name</td>
+                                        <td class="text-center">@item.route_number</td>
+                                        <td class="text-center">
+                                            <a href="@Url.Action("editarCuenta", "cuotas", new { area = "coadmin", editID = item.id })">
+                                                <button type="button" class="btn btn-primary waves-effect waves-light btn-sm mr-1 mb-1"
+                                                        data-toggle="tooltip" data-placement="top" title="Editar">
+                                                    <i class="mdi mdi-lead-pencil"></i>
+                                                </button>
+                                            </a>
+                                            <a href="#">
+                                                <button type="button" onclick="onDeleteBank(this)" data-id="@item.id"
+                                                        class="btn btn-danger waves-effect waves-light btn-sm mb-1"
+                                                        data-toggle="tooltip" data-placement="top" title="Eliminar">
+                                                    <i class="mdi mdi-delete"></i>
+                                                </button>
+                                            </a>
+                                        </td>
+                                    </tr>
                                     }
                                 </tbody>
                             </table>
