--- a/WebApplication1/Areas/coadmin/Views/tareas/listado.cshtml
+++ b/WebApplication1/Areas/coadmin/Views/tareas/listado.cshtml
@@ -60,6 +60,17 @@
         <!-- end back button -->
 
         <div class="row">
+            @if (ViewBag.msgError != null)
+            {
+                <div class="col-12">
+                    <div class="alert alert-danger" role="alert">
+                        <strong>Error: </strong> @ViewBag.msgError
+                        <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+                            <span aria-hidden="true">&times;</span>
+                        </button>
+                    </div>
+                </div>
+            }
             <div class="col-12">
                 <div class="card m-b-30">
                     <div class="card-body">
@@ -96,44 +107,54 @@
                                 <tbody>
                                     @foreach (var item in Model.taskList)
                                     {
-                                    <tr>
-                                        <td>@item.task_name</td>
-                                        <td>@item.responsable</td>
-                                        <td class="text-center">@Convert.ToDateTime(item.task_date).ToString("MM/dd/yyyy")</td>
-                                        <td class="text-center">@Convert.ToDateTime(item.estimated_date).ToString("MM/dd/yyyy | HH:mm")</td>
-                                        <td class="text-center">
-                                            @if (item.share == 1)
-                                            {
-                                                <button type="button" class="btn btn-info waves-effect waves-light btn-sm mr-1 mb-1">General</button>
-                                            }
-                                            else
-                                            {
-                                                <button type="button" class="btn btn-warning waves-effect waves-light btn-sm mb-1">Administradores</button>
-                                            }
-                                        </td>
-                                        <td class="text-center">
-                                            @if (item.status == 2)
-                                            {
-                                                <button type="button" class="btn btn-primary waves-effect waves-light btn-sm">En Proceso</button>
-                                            }
-                                            else if (item.status == 3)
-                                            {
-                                                <button type="button" class="btn btn-dark waves-effect waves-light btn-sm">Terminada</button>
-                                            }
-                                            else
-                                            {
-                                                <button type="button" class="btn btn-warning waves-effect waves-light btn-sm">Sin comenzar</button>
-                                            }
-                                        </td>
-                                        <td class="text-center"><a href="@Url.Action("vertarea", "tareas", new { area = "coadmin", taskID = item.id })">
-                                            <button type="button" class="btn btn-success waves-effect waves-light btn-sm mr-1 mb-1"
-                                                    data-toggle="tooltip" data-placement="top" title="Ver"><i class="mdi mdi-eye"></i></button></a>
-                                        <a href="@Url.Action("editar", "tareas", new { area = "coadmin", taskID = item.id })">
-                                            <button type="button" class="btn btn-primary waves-effect waves-light btn-sm mr-1 mb-1" 
-                                                    data-toggle="tooltip" data-placement="top" title="Editar"><i class="mdi mdi-lead-pencil"></i></button></a>
-                                        <button type="button" onclick="onDeleteTask(this)" data-id="@item.id" class="btn btn-danger waves-effect waves-light btn-sm mb-1" data-toggle="tooltip" 
-                                                data-placement="top" title="Eliminar"><i class="mdi mdi-delete"></i></button></td>
-                                    </tr>
+                                        <tr>
+                                            <td>@item.task_name</td>
+                                            <td>@item.responsable</td>
+                                            <td class="text-center">@Convert.ToDateTime(item.task_date).ToString("MM/dd/yyyy")</td>
+                                            <td class="text-center">@Convert.ToDateTime(item.estimated_date).ToString("MM/dd/yyyy | HH:mm")</td>
+                                            <td class="text-center">
+                                                @if (item.share == 1)
+                                                {
+                                                    <button type="button" class="btn btn-info waves-effect waves-light btn-sm mr-1 mb-1">General</button>
+                                                }
+                                                else
+                                                {
+                                                    <button type="button" class="btn btn-warning waves-effect waves-light btn-sm mb-1">Administradores</button>
+                                                }
+                                            </td>
+                                            <td class="text-center">
+                                                @if (item.status == 2)
+                                                {
+                                                    <button type="button" class="btn btn-primary waves-effect waves-light btn-sm">En Proceso</button>
+                                                }
+                                                else if (item.status == 3)
+                                                {
+                                                    <button type="button" class="btn btn-dark waves-effect waves-light btn-sm">Terminada</button>
+                                                }
+                                                else
+                                                {
+                                                    <button type="button" class="btn btn-warning waves-effect waves-light btn-sm">Sin comenzar</button>
+                                                }
+                                            </td>
+                                            <td class="text-center">
+                                                <a href="@Url.Action("vertarea", "tareas", new { area = "coadmin", taskID = item.id })">
+                                                    <button type="button" class="btn btn-success waves-effect waves-light btn-sm mr-1 mb-1"
+                                                            data-toggle="tooltip" data-placement="top" title="Ver">
+                                                        <i class="mdi mdi-eye"></i>
+                                                    </button>
+                                                </a>
+                                                <a href="@Url.Action("editar", "tareas", new { area = "coadmin", taskID = item.id })">
+                                                    <button type="button" class="btn btn-primary waves-effect waves-light btn-sm mr-1 mb-1"
+                                                            data-toggle="tooltip" data-placement="top" title="Editar">
+                                                        <i class="mdi mdi-lead-pencil"></i>
+                                                    </button>
+                                                </a>
+                                                <button type="button" onclick="onDeleteTask(this)" data-id="@item.id" class="btn btn-danger waves-effect waves-light btn-sm mb-1" data-toggle="tooltip"
+                                                        data-placement="top" title="Eliminar">
+                                                    <i class="mdi mdi-delete"></i>
+                                                </button>
+                                            </td>
+                                        </tr>
                                     }
                                 </tbody>
                             </table>
