--- a/WebApplication1/Areas/coadmin/Views/tareas/vertarea.cshtml
+++ b/WebApplication1/Areas/coadmin/Views/tareas/vertarea.cshtml
@@ -76,12 +76,6 @@
 
 
                                             }
-
-
-
-
-
-                                       
                                             
                                         </p>
                                     </div>
@@ -123,7 +117,7 @@
                                                 <div id="summernote" class="mb-2"></div>
                                                 <div class="form-group mb-0">
                                                     <div class="my-3">
-                                                        <a href=""><button class="btn btn-primary"> <span>Gardar</span></button></a>
+                                                        <a href=""><button class="btn btn-primary"> <span>Guardar</span></button></a>
                                                         <a href=""><button type="button" class="btn btn-danger waves-effect waves-light">Cancelar</button></a>
                                                     </div>
                                                 </div>
