--- a/WebApplication1/Areas/coadmin/Views/titulares/agregarTitulo.cshtml
+++ b/WebApplication1/Areas/coadmin/Views/titulares/agregarTitulo.cshtml
@@ -117,7 +117,7 @@
                             <div class="form-group row">
                                 <label class="col-sm-3 col-form-label">Comunidad</label>
                                 <div class="col-sm-9">
-                                    <select class="form-control" required name="IdCommunity"
+                                    <select required class="form-control" name="IdCommunity"
                                             data-toggle="tooltip" title="Nombre de la comunidad" id="IdCommunity">
                                         <option selected value="@Model.communityS.id">@Model.communityS.first_name</option>
                                     </select>
@@ -141,7 +141,7 @@
                             <div class="form-group row">
                                 <label for="apartment-input" class="col-sm-3 col-form-label">Propiedad</label>
                                 <div class="col-sm-9">
-                                    <input class="form-control" type="text" value="" name="apartment" required
+                                    <input maxlength="30" class="form-control solotTexto" type="text" value="" name="apartment" required
                                            data-toggle="tooltip" title="Propiedad del titular"
                                            placeholder="Propiedad" id="apartment-input">
                                     <small class="form-text text-muted">Propiedad del titular</small>
@@ -194,7 +194,7 @@
                                 <div class="form-group row">
                                     <label for="example-date-input" class="col-sm-3 col-form-label">Desde</label>
                                     <div class="col-sm-9">
-                                        <input name="since"
+                                        <input autocomplete="off" class="hiddenRequired" name="since"
                                                id="fecha2">
                                         <small class="form-text text-muted">Mes / día / año</small>
                                     </div>
@@ -202,7 +202,7 @@
                                 <div class="form-group row">
                                     <label for="example-date-input" class="col-sm-3 col-form-label">Hasta</label>
                                     <div class="col-sm-9">
-                                        <input name="until"
+                                        <input autocomplete="off" class="hiddenRequired" name="until"
                                                id="fecha3">
                                         <small class="form-text text-muted">Mes / día / año</small>
                                     </div>
@@ -214,7 +214,7 @@
                                 <div class="form-group row">
                                     <label for="example-name2-input" class="col-sm-3 col-form-label">Nombre</label>
                                     <div class="col-sm-9">
-                                        <input class="form-control" type="text" value="" name="tenant_first_name1"
+                                        <input maxlength="30" class="form-control hiddenRequired solotTexto" type="text" value="" name="tenant_first_name1"
                                                data-toggle="tooltip" title="Nombre del arrendatario"
                                                placeholder="Nombre" id="example-name2-input">
                                         <small class="form-text text-muted">Nombre del arrendatario</small>
@@ -223,7 +223,7 @@
                                 <div class="form-group row">
                                     <label for="example-lastname2-input" class="col-sm-3 col-form-label">Apellido paterno</label>
                                     <div class="col-sm-9">
-                                        <input class="form-control" type="text" value="" name="tenant_last_name1"
+                                        <input maxlength="20" class="form-control hiddenRequired solotTexto" type="text" value="" name="tenant_last_name1"
                                                data-toggle="tooltip" title="Apellido paterno del arrendatario"
                                                placeholder="Apellido paterno" id="example-lastname2-input">
                                         <small class="form-text text-muted">Apellido paterno del arrendatario</small>
@@ -232,7 +232,7 @@
                                 <div class="form-group row">
                                     <label for="example-lastname2m-input" class="col-sm-3 col-form-label">Apellido materno</label>
                                     <div class="col-sm-9">
-                                        <input class="form-control" type="text" value="" name="tenant_mother_last_name1" placeholder="Apellido materno"
+                                        <input maxlength="20" class="form-control hiddenRequired solotTexto" type="text" value="" name="tenant_mother_last_name1" placeholder="Apellido materno"
                                                data-toggle="tooltip" title="Apellido materno del arrendatario"
                                                id="example-lastname2m-input">
                                         <small class="form-text text-muted">Apellido materno del arrendatario</small>
@@ -242,7 +242,7 @@
                                 <div class="form-group row">
                                     <label for="example-address1-input" class="col-sm-3 col-form-label">Dirección postal</label>
                                     <div class="col-sm-9">
-                                        <input class="form-control" type="text" value="" name="leased_postal_address"
+                                        <input maxlength="15" class="form-control hiddenRequired" type="text" value="" name="leased_postal_address"
                                                data-toggle="tooltip" title="Dirección postal del arrendatario"
                                                placeholder="Dirección postal" id="example-address1-input">
                                         <small class="form-text text-muted">Dirección postal del arrendatario</small>
@@ -255,7 +255,7 @@
                                 <div class="form-group row">
                                     <label for="example-address2-input" class="col-sm-3 col-form-label">Dirección residencial</label>
                                     <div class="col-sm-9">
-                                        <input class="form-control" type="text" value="" placeholder="Dirección residencial"
+                                        <input maxlength="90" class="form-control hiddenRequired" type="text" value="" placeholder="Dirección residencial"
                                                data-toggle="tooltip" title="Dirección residencial del arrendatario" name="leased_residential_address"
                                                id="example-address2-input">
                                         <small class="form-text text-muted">Dirección residencial del arrendatario</small>
