--- a/WebApplication1/Areas/webmaster/Views/paquetes/editar.cshtml
+++ b/WebApplication1/Areas/webmaster/Views/paquetes/editar.cshtml
@@ -69,7 +69,7 @@
                                         <div class="input-group-prepend">
                                             <span class="input-group-text"><i class="fas fa-dollar-sign"></i></span>
                                         </div>                                         
-                                        <input type="number" step="any" maxlength="10" placeholder="0.00" value="@Model.editPackage.payment.ToString().Replace(',', '.')" name="payment"
+                                        <input maxlength="20" type="text" onkeypress="return filterFloat(event,this);" placeholder="0.00" value="@Model.editPackage.payment.ToString().Replace(',', '.')" name="payment"
                                                data-toggle="tooltip"
                                                class="form-control" required />
                                     </div>
